fix(domino): #25343, revert previous changes on top right and remove overflow hidden on dominos

--- a/modules/_check-tool.scss
+++ b/modules/_check-tool.scss
@@ -1,8 +1,8 @@
 
 ///NEW CHECKBOXES
 .domino .check-tool{
-	right: -3px;
-	top: -4px;
+	right: -12px;
+	top: -13px;
 }
 
 .cards-list .card .check-tool{
